<resources>
    <string name="app_name">BBC</string>
    <string name="choose_role">Please choose your role in which you want to login</string>
    <string name="customer">Costumer</string>
    <string name="vendor">Vendor</string>
    <string name="admin">Admin</string>
    <string name="continue_btn">Continue</string>
    <string name="enter_your_phone_here">Enter your phone</string>
    <string name="if_it_is_your_first_login_enter_your_name">If it is your first login enter your name</string>
    <string name="title_activity_maps">Map</string>
    <string name="total_credit">Total credit</string>
    <string name="costumer_clue">CR</string>
    <string name="vendor_clue">VR</string>
    <string name="admin_clue">AN</string>
    <string name="user_not_available">Sorry the QR Code you just scanned doesnt belong to any of our users</string>
    <string name="pref_name">pREFRENCE</string>
    <string name="specify_amount">Please specify the amount of credit you want to send</string>
    <string name="balance_not_enough">Your balance is not enough</string>
    <string name="requests">Requests</string>
    <string name="sender">Sender</string>
    <string name="reciever">Reciever</string>
    <string name="no">NO</string>
    <string name="token">\ token/s</string>
    <string name="someone_wants_to_send">Someone want\'s to send you\ </string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="requet_accepted">The reciever accepted your transformation request</string>
    <string name="request_denied">The receiver denied your transformation request</string>
</resources>
